--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
@@ -30,8 +31,10 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
-    ]
-  },
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]},
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
