--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
+    "react-logger": "^1.1.0",
+    "react-redux": "^7.2.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -34,16 +36,21 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties"
-    ]},
+    ]
+  },
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "animate.css": "^4.1.0",
+    "chart.js": "^2.9.3",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "request": "^2.79.0",
     "url-loader": "^4.1.0"
   }
