[GowriK] Refactor : Implement the mixins less,Design is chsnged

--- a/package.json
+++ b/package.json
@@ -43,12 +43,16 @@
     "@material-ui/icons": "^4.9.1",
     "animate.css": "^4.1.0",
     "chart.js": "^2.9.3",
+    "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-rating-stars-component": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "request": "^2.79.0",
